fix overflow

--- a/app/assets/stylesheets/_coderay.css.scss
+++ b/app/assets/stylesheets/_coderay.css.scss
@@ -28,7 +28,7 @@
   ol.CodeRay { font-size: 10pt }
   ol.CodeRay li { white-space: pre }
 
-  .CodeRay .code pre { overflow: auto }
+  /*.CodeRay .code pre { overflow: auto }*/
 
   .CodeRay .debug { color:white ! important; background:blue ! important; }
 
